--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "wp-predict",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "element-plus": "^2.3.7",
+    "less-loader": "^11.1.3",
     "vue": "^3.2.13",
     "vue-router": "^4.2.2"
   },
