--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "animate.css": "^4.1.1",
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
+    "echart": "^0.1.3",
     "echarts": "^5.4.2",
     "element-plus": "^2.3.7",
     "less-loader": "^11.1.3",
