--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "animate.css": "^4.1.1",
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
+    "echart": "^0.1.3",
     "echarts": "^5.4.2",
     "element-plus": "^2.3.7",
     "less-loader": "^11.1.3",
@@ -23,7 +24,7 @@
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
+    "@vue/cli-service": "^5.0.8",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3"
   },
