--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "echarts": "^5.4.3",
     "element-plus": "^2.3.14",
     "less-loader": "^11.1.3",
     "vue": "^3.2.13",
