--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "echarts": "^5.4.3",
     "element-plus": "^2.3.14",
     "less-loader": "^11.1.3",
+    "normalize.css": "^8.0.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
