--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "echarts": "^5.4.3",
     "element-plus": "^2.3.14",
+    "feather-icons": "^4.29.1",
     "less-loader": "^11.1.3",
     "normalize.css": "^8.0.1",
-    "vue": "^3.2.13",
+    "vue": "^3.3.6",
+    "vue-feather": "^2.0.0",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
