--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "less-loader": "^11.1.3",
     "normalize.css": "^8.0.1",
     "vue": "^3.3.6",
+    "vue-baidu-map-3x": "^1.0.35",
     "vue-feather": "^2.0.0",
     "vue-router": "^4.0.3"
   },
